--- a/management/templates/leader_request_cancel.html
+++ b/management/templates/leader_request_cancel.html
@@ -1,5 +1,8 @@
                                         {% if not member.user.username in leader_member_connect_request_list %}
                                         <div class="leader-profile-add-member-btn-container-div">
+                                            <span id="loading-spinning{{ member.user}}-{{ leader.user }}"
+                                                  class="loading-spinner">
+                                            </span>
                                             <form action="{% url 'request-connect' member.user leader.user %}">
                                                 {% csrf_token %}
                                                 <button hx-post="{% url 'request-connect' member.user leader.user %}"
@@ -7,13 +10,10 @@
                                                         hx-swap="innerHTML"
                                                         hx-indicator="#loading-spinning{{ member.user}}-{{ leader.user }}"
                                                         class="leader-profile-connect-request-btn"
-                                                        id="leader-connect-btn{{ member.user}}-{{ leader.user }}">
+                                                        id="leader-connect-btn{{ member.user}}-{{ leader.user }}"
+                                                        onclick="hideButton(this)">
                                                     Add as Member
                                                 </button>
-                                                <span id="loading-spinning{{ member.user}}-{{ leader.user }}"
-                                                      class="loading-spinner">
-
-                                                </span>
                                             </form>
                                             <!--                                            <a class="leader-profile-associate-member-btn"-->
                                             <!--                                               href="{% url 'request-connect' member.user leader.user %}">-->
@@ -22,19 +22,24 @@
                                         </div>
                                         {% else %}
                                         <div class="leader-profile-leader-connect-request-div">
-                                            <div class="leader-profile-request-sent-notifier">
-                                                Request Sent
-                                            </div>
+<!--                                            <div class="leader-profile-request-sent-notifier">-->
+<!--                                                Request Sent-->
+<!--                                            </div>-->
                                             <div class="leader-profile-revert-connect-div">
-                                                <form action="{% url 'revert-request-connect' member.user leader.user %}">
-                                                    {% csrf_token %}
-                                                    <button hx-post="{% url 'revert-request-connect' member.user leader.user %}"
-                                                            hx-target="#harkon-{{ member.user}}-{{ leader.user }}"
-                                                            hx-swap="innerHTML"
-                                                            class="leader-profile-revert-request-btn">
-                                                        Cancel
-                                                    </button>
-                                                </form>
+                                                    <span id="loading-spinning-cancel{{ member.user}}-{{ leader.user }}"
+                                                          class="loading-spinner">
+                                                    </span>
+                                                    <form action="{% url 'revert-request-connect' member.user leader.user %}">
+                                                        {% csrf_token %}
+                                                        <button hx-post="{% url 'revert-request-connect' member.user leader.user %}"
+                                                                hx-target="#harkon-{{ member.user}}-{{ leader.user }}"
+                                                                hx-indicator="#loading-spinning-cancel{{ member.user}}-{{ leader.user }}"
+                                                                hx-swap="innerHTML"
+                                                                class="leader-profile-revert-request-btn"
+                                                                onclick="hideButton(this)">
+                                                            Cancel
+                                                        </button>
+                                                    </form>
 <!--                                                <a class="leader-profile-revert-request-function"-->
 <!--                                                   href="{% url 'revert-request-connect' member.user leader.user %}">-->
 <!--                                                    Revert-->
