--- a/management/templates/reports.html
+++ b/management/templates/reports.html
@@ -64,6 +64,11 @@
                 Member per Sitio
             </div>
         </a>
+        <a class="reports-report-block-div" href="{% url 'ambiguous-voters' %}">
+            <div class="reports-block-report-title-div">
+                Ambiguous Voters
+            </div>
+        </a>
     </div>
 </section>
 {% endblock %}
