--- a/management/static/registrants.css
+++ b/management/static/registrants.css
@@ -119,3 +119,32 @@
     color: rgb(150, 150, 150);
     text-transform: uppercase;
 }
+
+.registrants-filter-registrant-form{
+    text-align: center;
+}
+
+.registrant-select-brgy-filter-field{
+    width: 200px;
+    height: 30px;
+    border-radius: 10px;
+}
+
+.registrant-filter-brgy-btn{
+    width: 60px;
+    height: 30px;
+    border-radius: 10px;
+    border: 1px solid rgb(100, 100, 100);
+    cursor: pointer;
+
+}
+
+.registrants-filtered-registrants-header{
+    text-align: center;
+    font-family: 'Montserrat';
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 20px;
+    color: rgb(100, 100, 100);
+    margin: 15px;
+}
